# pulumicicd

./: Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  rebuild-shared.sh  reinstall-shared.sh  requirements.txt
.github/: push.yaml
.github/workflows/: push.yaml
base/: Pulumi.cvm-base-dev.yaml  Pulumi.cvm-base-prod.yaml  Pulumi.cvm-base-uat.yaml  Pulumi.yaml  __main__.py  maf_sagemaker.py  migration_services.py  rds.py
doc/cicd/: branching.md  cicd.drawio
jobs/: Pulumi.cvm-jobs-dev.yaml  Pulumi.cvm-jobs-gar.yaml  Pulumi.cvm-jobs-ish.yaml  Pulumi.cvm-jobs-krz.yaml  Pulumi.cvm-jobs-luk.yaml  Pulumi.cvm-jobs-prod.yaml  Pulumi.cvm-jobs-uat.yaml  Pulumi.yaml  __main__.py  deploy.py  migration_services.py
jobs/algorithms/: enrich_customer_profile.py  features_prep.py  train_all_flow.py  transform_all_flow.py
jobs/backup/: app_group.py  backup_audience_buildPROD11-08-2023.py  backup_audiences3006.py  load_promotions_to_offers_bank.py_backup.py
jobs/control_tower/: calculate_data_validation_dashboard.py  load_cmt2_results.py  load_cmt_ls_product_results.py  load_cmt_results.py  load_data_validation_dashboard.py
jobs/data_generation/: load_to_opensearch.py  sample_customer_profiles.py
jobs/dependencies/: Faker-19.2.0-py3-none-any.whl  delta_spark-2.2.0-py3-none-any.whl  opensearch_py-2.3.0-py2.py3-none-any.whl  (+1 more)
lake/: Pulumi.cvm-lake-dev.yaml  Pulumi.cvm-lake-gar.yaml  Pulumi.cvm-lake-ish.yaml  Pulumi.cvm-lake-krz.yaml  Pulumi.cvm-lake-luk.yaml  Pulumi.cvm-lake-prod.yaml  Pulumi.cvm-lake-uat.yaml  Pulumi.yaml  __main__.py  budgets.py  common.py
(+206 files in other folders)
